# exastro-provisioning

./: .gitignore  README.md
exastro-cdk/: .gitignore  .pre-commit-config.yaml  CLAUDE.md  MEMO.md  README.md  pyproject.toml  requirements.txt
exastro-cdk/docs/: .gitignore  01_FOUNDATION_PHASE.md  USER_FLOW.md  contributing.md  create_conductor.md  roadmap.md
exastro-cdk/docs/01_FOUNDATION_PHASE/: README.md  about_conductor.md
exastro-cdk/docs/01_FoundationPhase/: README.md  task_list.md
exastro-cdk/docs/02_SynchronizationPhase/: README.md
exastro-cdk/docs/03_AdvancedSyncAndLifecycleManagementPhase/: README.md
exastro-cdk/docs/04_ValidationAndTestPhase/: README.md
exastro-cdk/docs/05_PackagingAndReleasePhase/: README.md
exastro-cdk/docs/specs/: build-command.md  init-command.md  ita-api-reference.md  search-command.md  sync-command.md  test-command.md  verify-command.md
exastro-cdk/examples/: manifest.yaml
exastro-cdk/python/: pyproject.toml
exastro-cdk/python/token/: create_access_token.py
exastro-cdk/python/workspace/: create_workspace.py
exastro-cdk/src/: requirements.txt
exastro-cdk/src/exastro_cdk/: __init__.py  main.py
exastro-cdk/src/exastro_cdk/cli/: apply.py  build.py  init.py
exastro-cdk/src/exastro_cdk/core/: config.py  engine.py
exastro-cdk/src/exastro_cdk/models/: README.md  ita_api.py  manifest.py  manifests.py
exastro-cdk/src/exastro_cdk/parser/: README.md
exastro-cdk/src/exastro_cdk/services/: ita_client.py  token.py
exastro-cdk/src/exastro_cdk/templates/: README.md  manifest.yaml.j2
exastro-cdk/src/movement/: create_movement.py
exastro-cdk/src/token/: create_access_token.py
exastro-cdk/tests/: __init__.py
exastro-cdk/tests/api/: README.md  __init__.py  conftest.py  pytest.ini
exastro-cdk/tests/api/conductor/: README.md  (+4 more)
exastro-cdk/tests/unit/: test_cli.py  test_engine.py  test_movement_resource.py
(+30 files in other folders)
